# lx-data-models

./: .devenv.flake.nix  .envrc  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  codecov.yml  data-models.excalidraw  development.code-workspace  devenv.nix  devenv.yaml  knowledge_base.yaml  loaded_kb_dump.yaml  manage.py  pyproject.toml
.github/: codecov.yml  dependabot.yml
.github/workflows/: ci.yml  docs.yml  publish.yml
docs/: Makefile  conf.py  dates-and-times.md  index.md  pydantic-cheatsheet.md
docs/api/: index.md
docs/guides/: dates-and-times.md  pydantic-cheatsheet.md
lx_dtypes/: __init__.py  django_settings.py
lx_dtypes/contrib/lx_django/: asgi.py  urls.py
lx_dtypes/contrib/lx_django/api/: __init__.py  request_types.py  stubs.py
lx_dtypes/contrib/lx_django/migrations/: 0001_initial.py  0002_examiner.py  0002_informationsource_types_alter_center_name_and_more.py  0002_remove_center_examiner_uuids_and_more.py  0003_center.py  0003_remove_patient_center_name_patient_center.py  0004_classificationchoicedescriptor.py  (+9 more)
lx_dtypes/data/: README.md
lx_dtypes/data/citations/: config.yaml  sample_references.bib
lx_dtypes/data/information_source_data/: config.yaml
lx_dtypes/data/logs/: .gitignore
lx_dtypes/data/lx_hardware/: config.yaml
lx_dtypes/data/lx_utils/: config.yaml
lx_dtypes/data/sample_knowledge_base/: config.yaml
lx_dtypes/data/terminology/: config.yaml
lx_dtypes/lx_django/: wsgi.py
lx_dtypes/lx_django/api/: main.py
lx_dtypes/lx_django/migrations/: 0002_patientexamination_patientfinding_and_more.py
lx_dtypes/lx_django/models/: __init__.py  typing.py
lx_dtypes/models/: __init__.py  knowledge_base.py
lx_dtypes/models/base_models/: base_model.py  examination.py  log.py  path.py  patient.py  patient_ledger.py  person.py
lx_dtypes/models/core/: __init__.py  center.py  center_shallow.py  citation.py  citation_shallow.py  classification.py  classification_choice.py  classification_choice_descriptor.py  classification_choice_descriptor_shallow.py  classification_choice_shallow.py  classification_shallow.py  examination.py  examination_shallow.py  finding.py  finding_shallow.py  indication.py  indication_shallow.py  information_source.py  information_source_shallow.py  intervention.py  intervention_shallow.py  unit.py  unit_shallow.py
lx_dtypes/models/examiner/: __init__.py  examiner.py
lx_dtypes/models/knowledge_base/: __init__.py  dataloader.py  knowledge_base.py  knowledge_base_config.py
lx_dtypes/models/ledger/: center.py  center_shallow.py  examiner.py  patient.py  patient_classification_choice_descriptor.py  patient_examination.py  patient_finding.py  patient_finding_classification_choice.py  patient_finding_classifications.py  patient_finding_interventions.py  patient_indication.py  patient_ledger.py
lx_dtypes/models/patient/: __init__.py  patient.py  patient_classification_choice_descriptor.py  patient_examination.py  patient_finding.py  patient_finding_classification_choice.py  patient_finding_classifications.py  patient_indication.py  patient_ledger.py
lx_dtypes/models/patient_interface/: __init__.py  main.py  patient_interface_create.py  patient_interface_delete.py  patient_interface_get.py  patient_interface_update.py  patient_interface_utils.py
lx_dtypes/models/shallow/: __init__.py  center.py  citation.py  classification.py  classification_choice.py  classification_choice_descriptor.py  examination.py  finding.py  indication.py  information_source.py  intervention.py  unit.py
lx_dtypes/stats/: dataset.py  dataset_meta.py  interface_export.py  schemas.py
lx_dtypes/stats/schemas/: __init__.py  common.py  knowledge_base.py  patient_ledger.py
lx_dtypes/typing/: helper.py
lx_dtypes/typing/ddict/: __init__.py  knowledge_base_deep.py  knowledge_base_shallow.py
lx_dtypes/typing/django/: kb_models.py  ledger_models.py
lx_dtypes/typing/pydantic/: __init__.py  knowledge_base_deep.py  knowledge_base_shallow.py  ledger.py
lx_dtypes/utils/: dataloader.py  ddicts.py  initialized_models.py  json_encoders.py  logging.py  parser.py  paths.py
lx_dtypes/utils/ddicts/: __init__.py  knowledge_base_deep.py  knowledge_base_shallow.py  ledger.py
lx_dtypes/utils/export/: export_knowledge_base.py
lx_dtypes/utils/factories/: field_defaults.py
lx_dtypes/utils/mixins/: __init__.py  base_model.py  path.py  tags.py
scripts/: bib_to_yaml.py
tests/: conftest.py  django_settings.py  test_citation.py
tests/api/: test_base_api.py  test_model_sync.py  test_model_sync_shallow.py  test_sync_knowledge_base.py  test_sync_knowledge_base_models.py  test_sync_ledger_models.py
tests/base_models/: test_patient.py  test_patient_ledger.py  test_person_model.py
tests/examination/: test_base_examination_model.py
tests/files_and_dirs/: test_files_and_dirs_model.py
tests/fixtures/: center.py  citation.py  classification.py  classification_choice.py  classification_choice_descriptor.py  dataloader.py  django.py  examination.py  examiner.py  finding.py  indication.py  information_source.py  intervention.py  knowledge_base.py  logs.py  object_names.py  paths.py  patient.py  patient_classification_choice_descriptor.py  patient_examination.py  patient_interface.py  patient_ledger.py  person.py  unit.py
tests/knowledge_base/: test_data_loader.py  test_kb_config.py  test_kb_example.py  test_kb_exampley.py  test_knowledge_base_model.py
tests/logs/: test_log_model.py  test_log_writer.py  test_scoped_logger.py
tests/model_dump/: test_base_models.py  tmp.json
tests/patient/: test_patient.py  test_patient_examination.py  test_patient_finding_classifications.py  test_patient_interface.py  test_patient_ledger.py
tests/patient_interface/: test_patient_interface.py  test_patient_interface_create_methods.py  test_patient_interface_delete_methods.py  test_patient_interface_get_methods.py  test_patient_interface_update_methods.py
tests/smartie/: test_import_exams.py
tests/utils/: test_field_defaults.py  test_json_encoders.py  test_parser_shallow.py  test_path_helpers.py  test_path_mixin.py
(+139 files in other folders)
